<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.greencode.enticement_android.ViewFragments.LoginFragment"
    xmlns:font="http://schemas.android.com/apk/com.greencode.enticement_android"
    font:typeface="Roboto-Regular.ttf"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        >

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:text="LOGIN"
                    android:textAllCaps="true"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    />

                <com.cengalabs.flatui.views.FlatEditText
                    android:layout_marginTop="@dimen/margin_48"
                    android:id="@+id/login.emailinput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_48"
                    android:drawableLeft="@drawable/ic_email_white_24dp"
                    android:drawablePadding="@dimen/margin_8"
                    android:hint="@string/prompt_email"
                    android:inputType="textAutoComplete"
                    android:paddingLeft="@dimen/margin_16"
                    android:paddingRight="@dimen/margin_16"
                    android:textColorHint="@color/deep_light"
                    android:textSize="@dimen/font_large"
                    flatui:fl_borderWidth="1dp"
                    flatui:fl_cornerRadius="1dp"
                    flatui:fl_fieldStyle="fl_transparent"
                    flatui:fl_theme="@array/deep"/>

                <com.cengalabs.flatui.views.FlatEditText
                    android:id="@+id/login.passwordinput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_48"
                    android:layout_marginTop="@dimen/margin_24"
                    android:drawableLeft="@drawable/ic_vpn_key_white_24dp"
                    android:drawablePadding="@dimen/margin_8"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/margin_16"
                    android:paddingRight="@dimen/margin_16"
                    android:textColorHint="@color/deep_light"
                    android:textSize="@dimen/font_large"
                    flatui:fl_borderWidth="1dp"
                    flatui:fl_cornerRadius="1dp"
                    flatui:fl_fieldStyle="fl_transparent"
                    flatui:fl_theme="@array/deep"/>

                <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/active_button"
                    android:layout_marginTop="25dp"
                    android:text="@string/action_sign_in"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAllCaps="false"/>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/register_btn"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_gravity="end"
                        android:gravity="center"
                        android:text="@string/register_link"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/forget_password_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_gravity="start|left"
                        android:gravity="center"
                        android:text="@string/register_link"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true" />

                </RelativeLayout >
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</RelativeLayout>
